--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@angular/router": "~9.0.0",
     "bootstrap": "^4.4.1",
     "moment": "^2.24.0",
+    "ngx-material-timepicker": "^5.3.0",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
